--- a/index.html
+++ b/index.html
@@ -8,7 +8,8 @@
     <link rel="stylesheet" href="./style.css">
 </head>
 <body>
-    <h1>hello git</h1>
-    <h2>modify</h2>
+   <header>
+    header
+   </header>
 </body>
 </html>
