--- a/index.html
+++ b/index.html
@@ -11,5 +11,9 @@
    <header>
     header
    </header>
+   <div class="slider">
+    <h3>slide one</h3>
+    <h3>slide two</h3>
+   </div>
 </body>
 </html>
