--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
    <div class="slider">
     <h3>slide one</h3>
     <h3>slide two</h3>
+    <h3>slide three</h3>
    </div>
    <footer>
     footer
