--- a/index.html
+++ b/index.html
@@ -8,6 +8,9 @@
     <link rel="stylesheet" href="./style.css">
 </head>
 <body>
+    <nav>
+        <a href="#">home</a>
+    </nav>
    <header>
     header
    </header>
